--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^13.3.0",
     "supertest": "^6.3.3",
     "vitest": "^0.34.6"
   },
